--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,7 @@
 .profile {
   display: flex;
   padding: 34px 0 20px;
-  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+
   font-family: Poppins, Arial, Helvetica, sans-serif;
   line-height: 1;
 }
@@ -21,7 +21,7 @@
 .profile__name {
   margin: 0 0 12px;
   font-size: 32px;
-
+  line-height: 1;
   font-weight: 500;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   display: -webkit-box;
@@ -30,6 +30,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
 }
 
 .profile__description {
@@ -42,20 +43,31 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  line-height: 1;
 }
 
 .profile__edit-btn {
   display: flex;
-  background-color: #fcf5e5;
+  background-color: transparent;
   margin-top: auto;
   gap: 8px;
   opacity: 70%;
   border: none;
   font-size: 16px;
+  line-height: 1;
+  font-weight: 500;
+  color: #212121;
+}
+
+.profile__edit-btn::before {
+  content: url(../images/edit-btn.svg);
+  width: 16px;
+  height: 16px;
 }
 
 .profile__edit-btn:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 .profile__add-btn {
@@ -71,10 +83,20 @@
   gap: 8px;
   font-size: 16px;
   flex-wrap: nowrap;
+  font-weight: 500;
+  line-height: 1;
+  border: 0;
+}
+
+.profile__add-btn::before {
+  content: url(../images/new-post.svg);
+  width: 16px;
+  height: 16px;
 }
 
 .profile__add-btn:hover {
   background-color: rgba(33, 33, 33, 0.8);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
