--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -7,18 +7,16 @@
   grid-template-columns: repeat(auto-fit, 413px);
   justify-content: center;
   list-style-type: none;
-  padding: 0 0 40px;
-
+  padding: 0;
   margin: 0;
   gap: 40px 20px;
-
-  border-bottom: 1px #212121 solid;
 }
 
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    margin: 0 16px 20px;
+
     padding: 0 0 20px;
+    gap: 20px;
   }
 }
