--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,8 +10,13 @@
   line-height: 1;
 }
 
+.footer__copy {
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (max-width: 627px) {
   .footer {
-    padding: 0 108px 60px;
+    padding-top: 60px;
   }
 }
