--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,14 +2,16 @@
   background-color: #fcf5e5;
   margin: 0;
   padding: 0;
-
+  min-height: 100vh;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
+  padding: 0 0 40px;
 }
 
 .page__section {
   max-width: 1280px;
-
+  padding-bottom: 40px;
   margin: 0 auto;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
