--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,7 +6,7 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
-  padding: 0 0 40px;
+  padding: 0;
 }
 
 .page__section {
