project 4 final stage

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,10 +10,13 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 1s ease-in;
 }
 
 .modal__is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__content {
