--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,6 +1,7 @@
 .card {
   max-width: 413px;
 
+  position: relative;
   font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
@@ -25,6 +26,22 @@
   margin-bottom: 12px;
 }
 
+.card__delete-btn {
+  background-image: url(../images/delete..svg);
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+}
+
+.card__delete-btn:hover {
+  background-image: url(../images/delete-hover.svg);
+  cursor: pointer;
+}
+
 .card__like-btn {
   background-image: url(../images/heart.svg);
   height: 20px;
@@ -40,6 +57,15 @@
 .card__like-btn:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.card__like-btn_active {
+  background-image: url(../images/like-active.svg);
+  opacity: 1;
+}
+
+.card__like-btn_active:hover {
+  opacity: 0.4;
 }
 
 .card__content {
