fial adjustments on SPOTS

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,20 +41,22 @@
   height: 40px;
   background-color: transparent;
   border: none;
+  opacity: 0.4;
 }
 
 .modal__close-btn:hover {
   cursor: pointer;
-  color: #212121;
+  opacity: 1;
 }
 
 .modal__close-btn_type_preview {
   background-image: url(../images/delete-preview-Btn.svg);
   top: 0;
   right: -52.5px;
+  opacity: 1;
 }
 
-.modal__close-btn_preview:hover {
+.modal__close-btn_type_preview:hover {
   opacity: 0.4;
 }
 
