--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -81,6 +81,7 @@
   color: #21212170;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
+  display: block;
 }
 
 .modal__input {
@@ -105,6 +106,17 @@
   color: #2121214d;
 }
 
+.modal__error {
+  display: block;
+  color: #f00;
+  opacity: 0.7;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  line-height: 110%;
+  margin-top: 8px;
+}
+
 .modal__save-btn {
   height: 52px;
   max-width: 156px;
@@ -121,8 +133,23 @@
   justify-content: center;
 }
 
+.modal__save-btn-disabled {
+  background-color: #212121;
+  opacity: 0.5;
+}
+
+.modal__save-btn-disabled:hover {
+  background-color: #212121;
+  opacity: 0.8;
+}
+
 .modal__save-btn:hover {
   cursor: pointer;
+}
+
+.modal__input_type_error {
+  border: 1px solid #f00;
+  opacity: 0.6;
 }
 
 .modal__image-container {
