Spots project stage 9 first corrections done

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,7 +14,7 @@
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
-  width: 353px;
+  max-width: 353px;
 }
 
 .card__image {
@@ -52,7 +52,7 @@
   width: 23px;
   border: none;
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
   margin: 0;
   background-repeat: no-repeat;
   background-size: cover;
