--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,7 +5,7 @@
   font-weight: 400;
   padding: 60px;
   color: #212121;
-  opacity: 70%;
+  opacity: 0.7;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   line-height: 1;
 }
