--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -51,7 +51,7 @@
   background-color: transparent;
   margin-top: auto;
   gap: 8px;
-  opacity: 70%;
+  opacity: 0.7;
   border: none;
   font-size: 16px;
   line-height: 1;
