Spots stage 4th review

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -18,7 +18,7 @@
   padding: 0 16px;
 }
 
-.modal__is-opened {
+.modal_is-opened {
   visibility: visible;
   opacity: 1;
 }
@@ -134,12 +134,12 @@
   justify-content: center;
 }
 
-.modal__save-btn-disabled {
+.modal__save-btn_disabled {
   background-color: #212121;
   opacity: 0.5;
 }
 
-.modal__save-btn-disabled:hover {
+.modal__save-btn_disabled:hover {
   background-color: #212121;
   opacity: 0.8;
 }
